Add internal details for external API discovery
